# ouro-mcp

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
notes/: local-testing.md
scripts/: check_slim_connection_graph_live.py
src/ouro_mcp/: __init__.py  config.py  constants.py  errors.py  logging_config.py  server.py  utils.py
src/ouro_mcp/prompts/: __init__.py  quests.py
src/ouro_mcp/resources/: __init__.py  datasets.py  files.py  notifications.py  posts.py  profile.py
src/ouro_mcp/tools/: __init__.py  assets.py  comments.py  conversations.py  datasets.py  files.py  money.py  notifications.py  organizations.py  posts.py  quests.py  services.py  teams.py  users.py
tests/: test_action_assets_compaction.py  test_attribution_summary.py  test_config.py  test_content_from_markdown_integration.py  test_dataset_views.py  test_datasets.py  test_error_formatting.py  test_files_resolve_input.py  test_get_asset_comment_detail.py  test_logging_config.py  test_markdown_normalization.py  test_posts_markdown_input.py  test_prompts.py  test_quests.py  test_resolve_local_path.py  test_route_input_assets.py  test_share_asset.py  test_slim_connection_graph.py  test_strip_heavy_fields.py  test_teams.py  test_timestamp_localization.py  test_tools_direct.py  test_web_urls.py
tests/fixtures/: dataset_rows.csv  dataset_rows.json  dataset_rows.jsonl  dataset_rows.ndjson
